# The-Galaxy-Academy-Jhang-Backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  build.sh  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: cd.yml  ci.yml
api/: urls.py
api/v1/: urls.py
apps/: conftest.py
apps/core/: exceptions.py  logging.py  middleware.py  mixins.py  models.py  pagination.py  permissions.py  renderers.py  serializers.py  urls.py  views.py
apps/core/tests/: base.py  test_response.py
apps/users/: admin.py  apps.py  models.py  permissions.py  serializers.py  services.py  signals.py  views.py
apps/users/tests/: factories.py  test_auth.py  test_groups.py
config/: urls.py
config/settings/: __init__.py
config/settings/components/: api.py  auth.py  cache.py  core.py  default.py  health.py  observe.py  security.py  tasks.py
config/settings/environments/: development.py  production.py
